fix issue #12 - jumping model of adding option not in the right place

--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ body {
     max-width: var(--maxWidthOnPC);
     margin: 20px auto 20px auto;
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
 }
 
 .card {
